k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: mydevopsdemo01.azurecr.io/api-gateway:v1
          ports:
            - containerPort: 3000   # 👈 IMPORTANT (not 8080)
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 80          # what Ingress hits
      targetPort: 3000  # 👈 MUST be 3000, same as app/Dockerfile
